--- a/PracticasUnidad2/Practica3/static/css/style.css
+++ b/PracticasUnidad2/Practica3/static/css/style.css
@@ -1,38 +1,34 @@
-body {
-    text-align: center;
-    padding: 0 2em;
-    font-family: Montserrat, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
-    color: #444;
-    background: #eee;
+.styleImage img{
+   border: 1px solid #0c455e;
 }
-h1 {
-    font-weight: normal;
-    letter-spacing: -1px;
-    color: #34495E;
-}
-h2{
-  
-    text-align: left;
-    font-size: x-large;
-    font-weight: normal;
-    letter-spacing: -1px;
-    color: #34495E;
-}
-.menu {
-     background-color: gainsboro;
-     color: black;
-     margin: auto;
-     width: 50%;
-     border: 10px solid lawngreen;
-     border-radius: 10px;
-     padding: 10px;
- }
 
-.btnAgregar{
-    text-align: left;
+.grid-container {
+    display: grid;
+    gap: 10px;
+    
+    padding: 10px;
+}
 
+.grid-item {
+    
+    text-align: left;
+    padding: 20px;
+    font-size: 30px;
+}
+
+.item1 {
+    grid-column: 1 / span 2;
+    grid-row: 1;
+    border-right: 1px solid #ccc;
+}
+
+.item1 img{
+    width: 100%;
+    height: 100%;
+}
+.item2 {
+    grid-column: 3;
+    grid-row: 1 ;
 }
 .contenedor{
  
@@ -40,7 +36,34 @@ h2{
    
     
 }
-form{
+.BotonBody{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    border-top: 1px solid #ccc;
+    padding: 10px 0;
+    
+}
+.BotonBody a:link,
+a:visited {
+    border-collapse: collapse;
+    border-radius: .4em;
+    overflow: hidden;
+    margin: 1em 0;
+    background-color: #0c455e;
+    color: white;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.BotonBody a:hover,
+a:active {
+    background-color: gray;
+}
+
+/* form{
         background-color: gainsboro;
         color: black;
         margin: auto;
@@ -55,23 +78,25 @@ p{
         font-weight: normal;
         letter-spacing: -1px;
         color: #34495E;
-}
+} */
 table{
     border-collapse: collapse;
     width: 100%;
-    color: black;
+    color: #fff;
     border-radius: .4em;
     overflow: hidden;
     margin: 1em 0;
+    background-color: gray;
 }
 table,
 th,
 td {
-    border: 1px solid white;
+    border: 1px solid #fff;
+    
     
 }
 th {
-    background-color: lightgreen;
+    background-color: #0c455e;
     
     text-align: left;
 }
@@ -86,10 +111,11 @@ tr:nth-child(even) {
     background-color: gray;
 }
 tr:hover {
-    background-color: lightgreen;
+    background-color: #0c455e;
+    
 }
 
-a:link,
+/* a:link,
 a:visited {
     background-color: white;
     color: black;
@@ -104,4 +130,4 @@ a:hover,
 a:active {
     background-color: lightgreen;
     color: white;
-}
+} */
